GeoTool for extracting data from real world coordinates and pixels works now with both a single tif file (1 km) or a combination of 1 km tif files (10km x 10km)